# zps

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  Makefile  README.md  README_KO.md  release.sh  t
.application/: zps.desktop
.github/workflows/: ci.yml  docker.yml
docker/: Dockerfile  dockerfile
example/: z.c  zombie.c  zproc.c
man/: zps.1
scripts/: release.sh  test.sh
src/: pswc.c  zkill.c  zkill.h  zombie.c  zps.c  zps.h
